--- a/public/style.css
+++ b/public/style.css
@@ -708,6 +708,7 @@ h2 {
     transform: translateZ(0);
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    pointer-events: none;
 }
 
 /* Scroll animation - moves from bottom to top */
